# Voice-ka

./: .env  .gitignore  README.md  index.html  package-lock.json  package.json  voice-ka.mom  voice-ka_shema_01.drawio  Код.xlsx
setup/: README.md  docker-compose.yml  reset.bat  reset.ps1  reset.sh  setup.bat  setup.ps1  setup.sh
setup/docker/: init.sql
src/: index.css  main.tsx
src-client/: .env  package-lock.json  package.json  playwright.config.ts  tsconfig.json  vite.config.ts
src-client/playwright-report/: index.html
src-client/src-tauri/: Cargo.toml  tauri.conf.json
src-client/src-tauri/capabilities/: default.json
src-client/src-tauri/src/: lib.rs  main.rs
src-client/src-tauri/src/auth/: login.rs  logout.rs  register.rs
src-client/src-tauri/src/db/: mod.rs
src-client/src-tauri/src/logic/: guild.rs  message.rs  mod.rs  room.rs  user.rs
src-client/src-tauri/src/ws/: mod.rs  server.rs
src-client/test-results/: .last-run.json
src-client/tests/: README.md
src-server/: .env  .gitignore  Cargo.toml  package.json  playwright.config.ts
src-server/migrations/: 001_initial_schema.sql
src-server/playwright-report/: index.html
src-server/src/: lib.rs  main.rs
src-server/src/db/: mod.rs
src-server/src/handlers/: auth.rs  guild.rs  message.rs  mod.rs  room.rs
src-server/src/ws/: manager.rs  messages.rs  mod.rs
src-server/tests/: auth.spec.ts  guild.spec.ts  message.spec.ts  room.spec.ts  test-helper.ts  test-utils.ts  websocket.spec.ts
src-tauri/: .env  Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs  main.rs
src-tauri/src/auth/: login.rs  logout.rs  register.rs
src-tauri/src/db/: mod.rs
src-tauri/src/logic/: guild.rs  message.rs  mod.rs  room.rs  user.rs
src-tauri/src/ws/: manager.rs  messages.rs  server.rs
src/app/: App.css  App.tsx  Layout.tsx  Logined_Layout.tsx
src/entities/: Logout.tsx  Message.css  Message.tsx
src/features/: Chanels_List.css  Chanels_List.tsx  Rooms_List.css  Rooms_List.tsx  useAuth.tsx  useStore.tsx  useWebsocket.tsx
src/pages/: Auth_Page.css  Auth_Page.tsx  Chanel_Info_Page.tsx  Chanel_Page.tsx  Info_Pages.css  Main_Page.css  Main_Page.tsx  Personal_Account_Info_Page.tsx  Personal_Account_Page.tsx  Register_Page.css  Register_Page.tsx  Room_Info_Page.tsx
(+121 files in other folders)
