[package]
name = "voice-ka-server"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.51.0", features = ["full"] }
tokio-tungstenite = "0.21"
futures-util = "0.3"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sqlx = { version = "0.7", features = ["runtime-tokio-native-tls", "postgres", "chrono", "uuid", "ipnetwork"] }
chrono = "0.4"
uuid = { version = "1.23.0", features = ["v4"] }
dotenvy = "0.15"
once_cell = "1.20"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
argon2 = "0.5"

[[bin]]
name = "server"
path = "src/main.rs"