[package]
name = "voice-ka"
default-run = "voice-ka"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "voice_ka_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[[bin]]
name = "voice-ka"
path = "src/main.rs"

[[bin]]
name = "migrate"
path = "src/bin/migrate.rs"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sqlx = { version = "0.7", features = ["runtime-tokio-native-tls", "postgres", "chrono", "uuid"] }
tokio = { version = "1.51.0", features = ["full"] }
dotenvy = "0.15.7"
chrono = { version = "0.4", features = ["serde"] }
once_cell = "1.19"
argon2 = "0.5.3"
uuid = { version = "1.23.0", features = ["v4"] }
url = "2.5.8"
tauri-plugin-store = "2.4.2"
