[package]
name = "voice-ka"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "voice-ka"
path = "src/main.rs"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
tauri-plugin-store = "2"
serde = "1"
serde_json = "1"
